add website samples

--- a/index.html
+++ b/index.html
@@ -80,10 +80,13 @@
 										</div>
 										<div class="card-body d-flex align-items-start flex-column">
 											<div class="">
-												<p>A Django web application created for storing our family favourite meal recipes. The system then automatatically selects a meal for each night of the week and providing us with a shopping list for all the items required.</p>
+												<p>
+													A Django web application created for storing our family favourite meal recipes. The system then automatatically selects a meal for each night of the week and
+													provides us with a shopping list for all the items required.
+												</p>
 											</div>
 											<div class="mt-auto">
-												<a href="https://github.com/csl619/meal_app" type="button" class='btn btn-sm green-btn '>View Project</a>
+												<a href="https://github.com/csl619/meal_app" type="button" class='btn btn-sm green-btn' target="_blank">View Project</a>
 											</div>
 										</div>
 									</div>
@@ -98,7 +101,7 @@
 												<p>A small script to automate the backup process of a mysql database and uploading to a folder within Microsoft Onedrive for Business.</p>
 											</div>
 											<div class="mt-auto">
-												<a href="https://github.com/csl619/python_mysql_onedrive_backup" type="button" class='btn btn-sm green-btn '>View Project</a>
+												<a href="https://github.com/csl619/python_mysql_onedrive_backup" type="button" class='btn btn-sm green-btn' target="_blank">View Project</a>
 											</div>
 										</div>
 									</div>
@@ -113,7 +116,25 @@
 												<p>A lightweight Tkinter application for Windows used to convert a generic export out of the popular recruitment software Eclipse into a more user friendly excel workbook for use within payroll software.</p>
 											</div>
 											<div class="mt-auto">
-												<a href="https://github.com/csl619/eclipse_timesheet_converter" type="button" class='btn btn-sm green-btn '>View Project</a>
+												<a href="https://github.com/csl619/eclipse_timesheet_converter" type="button" class='btn btn-sm green-btn' target="_blank">View Project</a>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 my-2">
+									<div class="card">
+										<div class="card-header py-3">
+											<h5 class="card-header-text">Website Design</h5>
+										</div>
+										<div class="card-body d-flex align-items-start flex-column">
+											<div class="">
+												<p>I have created multiple websites for clients, these range from static sites to recruitment websites with built in job boards these have all been creating using Django.</p>
+												<p>A sample of these can be found below:</p>
+											</div>
+											<div class="mt-auto">
+												<a href="https://rebus-group.co.uk" type="button" class='btn btn-sm green-btn mr-1' target="_blank">Rebus.</a>
+												<a href="https://nayr-recruitment.co.uk" type="button" class='btn btn-sm green-btn mx-1' target="_blank">Nayr Recruitment</a>
+												<a href="https://sennit.co.uk" type="button" class='btn btn-sm green-btn mx-1' target="_blank">Sennit Construction</a>
 											</div>
 										</div>
 									</div>
